# new_mobile_manipulator

./: mobile_manipulator.urdf.xacro  robot.gazebo
maze_bot/: package.xml  setup.py
maze_bot/worlds/: maze_world.sdf
maze_pick_and_place/: CMakeLists.txt  package.xml  setup.py
maze_pick_and_place/config/: gz_bridge.yaml
maze_pick_and_place/launch/: maze_sim.launch.py
maze_pick_and_place/maze_pick_and_place/: pick_and_place_node.py
maze_pick_and_place/worlds/: maze_world.sdf
mobile_manipulator_bringup/: CMakeLists.txt  README.txt  package.xml  setup.cfg  setup.py
mobile_manipulator_bringup/config/: bridge_topics.yaml  nav2.yaml  nav2_params.yaml  ros_gz_bridge.yaml  slam_toolbox.yaml
mobile_manipulator_bringup/launch/: bringup.launch.py
mobile_manipulator_bringup/mobile_manipulator_bringup/: arm_controller.py  explore_and_collect.py  object_detector.py  pick_place.py
mobile_manipulator_bringup/models/: README.txt
mobile_manipulator_bringup/resource/: mobile_manipulator_bringup
mobile_manipulator_bringup/urdf/: base_and_arm.xacro  mobile_manipulator.urdf.xacro  robot.gazebo
mobile_manipulator_bringup/worlds/: maze.world
